--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </body>
 
 <script type="text/javascript">
-var elmApp = Elm.fullscreen(Elm.Main, {});
+var elmApp = Elm.Main.fullscreen();
 </script>
 
 </html>
