Add static semnatic menu

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Elm</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.1.8/semantic.min.css">
+
   <script type="text/javascript" src="Main.js"></script>
+
 </head>
 
 <body>
