Improve stick footer css

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>Elm</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.1.8/semantic.min.css">
 
+  <link rel="stylesheet" href="assets/stylesheets/style.css" />
   <script type="text/javascript" src="Main.js"></script>
 
 </head>
