Prevent favicon error

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="assets/stylesheets/style.css" />
   <script type="text/javascript" src="Main.js"></script>
 
+  <link rel="shortcut icon" href="">
+
 </head>
 
 <body>
